2008-08-09  Anatoly Sokolov  <aesok@post.ru>

	* devtools/gen-avr-lib-tree.sh (AVR31_DEV_INFO): Add the at43usb320
	device.
	* doc/api/using-tools.dox: Move the AT43USB320 device to avr31
	architecture.

2008-08-06  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23774.
	* include/avr/io90pwm2b.h: Add typecast to fuse definitions.
	* include/avr/io90pwm3b.h: Same.
	* include/avr/io90pwm216.h: Same.
	* include/avr/io90pwm316.h: Same.
	* include/avr/io90pwmx.h: Same.
	* include/avr/io90pwm1.h: Same.
	* include/avr/io8535.h: Same.
	* include/avr/io1200.h: Same.
	* include/avr/io2313.h: Same.
	* include/avr/io2323.h: Same.
	* include/avr/io2343.h: Same.
	* include/avr/io4414.h: Same.
	* include/avr/io443.h: Same.
	* include/avr/iom32m1.h: Same.
	* include/avr/iom32u4.h: Same.
	* include/avr/iom48.h: Same.
	* include/avr/iom48p.h: Same.
	* include/avr/iom64.h: Same.
	* include/avr/iom88.h: Same.
	* include/avr/iom88p.h: Same.
	* include/avr/iocan32.h: Same.
	* include/avr/iocan64.h: Same.
	* include/avr/iocan128.h: Same.
	* include/avr/iom8.h: Same.
	* include/avr/iom8hva.h: Same.
	* include/avr/iom16.h: Same.
	* include/avr/iom16hva.h: Same.
	* include/avr/iom32.h: Same.
	* include/avr/iom32c1.h: Same.
	* include/avr/iom32hvb.h: Same.
	* include/avr/iom164.h: Same.
	* include/avr/iom165.h: Same.
	* include/avr/iom165p.h: Same.
	* include/avr/iom168.h: Same.
	* include/avr/iom168p.h: Same.
	* include/avr/iom169.h: Same.
	* include/avr/iom169p.h: Same.
	* include/avr/iom103.h: Same.
	* include/avr/iom128.h: Same.
	* include/avr/iom161.h: Same.
	* include/avr/iom162.h: Same.
	* include/avr/iom163.h: Same.
	* include/avr/iom406.h: Same.
	* include/avr/iom640.h: Same.
	* include/avr/iom644.h: Same.
	* include/avr/iom645.h: Same.
	* include/avr/iom649.h: Same.
	* include/avr/iom323.h: Same.
	* include/avr/iom324.h: Same.
	* include/avr/iom325.h: Same.
	* include/avr/iom328.h: Same.
	* include/avr/iom329.h: Same.
	* include/avr/iom8515.h: Same.